--- a/william_ratcliff_cv_recent.html
+++ b/william_ratcliff_cv_recent.html
@@ -548,8 +548,7 @@ span.eqno {
 <h1>Research Interests</h1>
 <p>The primary focus of my research has been multiferroic materials.  Recently, I have explored geometric ferroelectricity in the LuFeO<sub>3</sub> series of compounds in both bulk and thin film samples (see 18,20, and 21) culminating
 in work with collaborators in the development of superlattices with near room temperature magneto-electric  effects.  Our neutron scattering work was key in understanding the intrinsic
-magnetic ordering of the LuFeO<sub>3</sub> geometric ferroelectric which templates LuFe<sub>2</sub>O<sub>4</sub> in the LuFeO<sub>3</sub>-LuFe<sub>2</sub>O<sub>4</sub> superlattice to dramatic effect.</p>
-<p>Recently, I have also worked on topological materials (see 2,3,4,5,16).  Of particular interest is the interplay of magnetism with topological materials.
+magnetic ordering of the LuFeO<sub>3</sub> geometric ferroelectric which templates LuFe<sub>2</sub>O<sub>4</sub> in the LuFeO<sub>3</sub>-LuFe<sub>2</sub>O<sub>4</sub> superlattice to dramatic effect.  Currently, I am working on topological materials (see 2,3,4,5,16).  Of particular interest is the interplay of magnetism with topological materials.
 For example in the MnBi<sub>2</sub>Te<sub>4</sub> system, our measurements of the magnetic structure under applied magnetic fields has direct implications for the band structure.</p>
 <!-- Technical skills -->
 <!-- - - - - - - - - - - - - - - - - -->
@@ -565,8 +564,8 @@ For example in the MnBi<sub>2</sub>Te<sub>4</sub> system, our measurements of th
 </div>
 <div class="section" id="career-experience">
 <h1>Career/Experience</h1>
-<p>2005-Present: Staff scientist at the NIST Center for Neutron Scattering at NIST.</p>
-<p>2003-2005: National Research Council Postdoc at the NIST Center for Neutron Research at NIST.  Primary work concerned neutron scattering experiments on geometrically frustrated magnets and magnetoelectric systems.  Also participated in x-ray experiments at Brookhaven and APS.  Also developed a GUI application for visualization of the   resolution ellipsoid for inclusion in the DAVE project at NIST.</p>
+<p>2005-Present: Staff scientist at the NIST Center for Neutron Scattering</p>
+<p>2003-2005: National Research Council Postdoc at the NIST Center for Neutron Research at NIST.  Primary work concerned neutron scattering experiments on geometrically frustrated magnets and magnetoelectric systems.  Also participated in x-ray experiments at Brookhaven and APS.  Developed a GUI application for visualization of the resolution ellipsoid for inclusion in the DAVE project.</p>
 <p>1997-2003: Worked with Sang W. Cheong in materials physics research including materials synthesis and characterization of novel magnetic systems.</p>
 <!-- * Sum 95-97: Worked with Fred Adams & Patricia Knezek on the search for an Initial Mass Function.  Work involved reduction of infrared CCD data using the IRAF package. (University of Michigan) -->
 <!-- * Sum 94:    Worked with Tony Tyson in the making of gravitational lensing simulations for use in scientific visualization. The project included the making of a video.  (Bell Labs) -->
@@ -581,7 +580,7 @@ For example in the MnBi<sub>2</sub>Te<sub>4</sub> system, our measurements of th
 <p>2012 Workshop on Representational Analysis and Magnetic Structure Determination, BARC, Mumbai, India**</p>
 <p>2011 The NIST/Georgetown 2nd School on Representational Analysis and Magnetic Structures Aug1-5, Georgetown, Washington, D.C.</p>
 <p>2010 Program Committee MMM Meeting, Atlanta, GA</p>
-<p>2007 The NIST Workshop on Representational Analysis of Complex Magnetic Structures, Gaithersburg, MD**</p>
+<p>2007 The NIST Workshop on Representational Analysis of Complex Magnetic Structures, Gaithersburg, MD</p>
 </div>
 <div class="section" id="selected-honors-and-memberships">
 <h1>Selected Honors and Memberships</h1>
@@ -1011,8 +1010,8 @@ Poster, Gordon Research Conference Strongly Correlated Electrons, June 2000.  Ne
 <h1>Instruction Experience</h1>
 <ul class="simple">
 <li>Conducted numerous summer schools at the NCNR</li>
-<li>SHIP mentor for high school students</li>
-<li>SURF mentor for undergraduate students</li>
+<li>Summer High School Intern Program (SHIP) mentor for high school students</li>
+<li>Summer Undergraduate Research Fellowship (SURF) mentor for undergraduate students</li>
 <li>Outreach through Adventures in Science</li>
 <li>Part time lecturer Physics 205
 Employer Rutgers
